--- a/src/App.css
+++ b/src/App.css
@@ -111,3 +111,76 @@ body{
 
   font-family: var(--font-family) ;
 }
+.nav-linkss {
+  padding: 13px !important;
+  /* padding-left: 2rem; Adjust padding */
+  /* padding-top: 1.25rem; Adjust vertical padding */
+  padding-bottom: 1.25rem;
+  margin-bottom: 0.75rem;
+  display: flex;
+  align-items: center;
+  border-radius: 0; /* Rounded corners */
+  transition: all 0.3s ease; /* Smooth transitions */
+  position: relative ;
+z-index: 2;
+}
+.nav-linkss:hover  .icon  {
+  color:white  !important;
+  /* background-color: white !important; */
+}
+.nav-linkss:hover .nav-hover{
+  width: 100% !important;
+  padding: 10px !important;
+
+}
+.nav-linkss:hover  .text{
+  color: white !important;
+}
+.nav-hover{
+  z-index: -1;
+  transition: 0.6s ease-in-out !important;
+  /* z-index: -1; */
+  height: 100%;
+  width: 0%;
+  background-color: #207DFF;
+  position: absolute;
+/* left: 0%; */
+  padding: 10px !important;
+}
+.nav-linkss:hover {
+  color: #0e41cd; /* Hover text color (blue-700) */
+  background-color: #eff6ff; /* Hover background color (blue-50) */
+}
+
+.nav-linkss.active {
+  /* background-color: #207DFF !important; */
+  color:#0a66e7 !important; /* Active text color */
+  border-right: 4px solid #207DFF !important; /* Active border */
+}
+
+.nav-linkss .icon {
+  transition: 0.6s ease-in-out !important;
+
+  background-color:#207DFF;
+  color: white ;
+  padding: 6px !important;
+  border-radius: 40px;
+  font-size: 35px !important;
+}
+
+.nav-linkss .text {
+  transition: 0.6s ease-in-out !important;
+
+  font-size: 15px; /* Text size (lg) */
+  font-weight: 400; /* Bold font */
+  display: flex;
+  gap: 1.25rem; /* Gap between icon and text */
+  align-items: center;
+}
+
+/* NAV-LINKS */
+.nav-linkss{
+  font-weight: 600 !important;
+  font-family: var(--font-family) !important;
+  /* color: red !important; */
+}
